# system-optimering-scheduling

./: .gitignore  CaseLoader.py  README.md  Task.py  caseLoader.py  cost_functions.py  edf_1.ipynb  evaluation.ipynb  main.py  neighborhood.py  note_ratio.txt  scheduling_sa.ipynb  scheduling_visualizer.py  simulated_annealer.py  skrald.ipynb  sucessful_run_parameters.txt  task.py  taskType.py  test_edf.py  test_neighborhood.py  test_sa.py  test_schedulability.py  testcases_seperation_tested_99.txt  viz_test.py  works_maybe.ipynb  works_maybe2.ipynb
cpp/: CMakeLists.txt  a.out  erasefromlist.cpp
cpp/include/: city.h  cost_functions.h  neighborhood.h  recombiner.h  simple_genetic_algorithm.h  simulated_annealing.h  solution_generator.h  task.h
cpp/src/: city.cpp  cost_functions.cpp  csv_reader.cpp  main.cpp  neighborhood.cpp  simple_genetic_algorithm.cpp  simulated_annealing.cpp  slet.cpp  solution_generator.cpp  task.cpp  test_edf.cpp  test_sga.cpp  test_solution_generator.cpp
cpp/test_cases/inf_10_20/: taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__1__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__25__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__27__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__35__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__41__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__51__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__53__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__67__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__70__tsk.csv  taskset__1643188030-a_0.1-b_0.2-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__79__tsk.csv
cpp/test_cases/inf_10_30/: taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__17__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__28__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__37__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__47__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__49__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__56__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__76__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__79__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__85__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__89__tsk.csv  taskset__1643188048-a_0.1-b_0.3-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__98__tsk.csv
cpp/test_cases/inf_10_40/: taskset__1643188066-a_0.1-b_0.4-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__22__tsk.csv  taskset__1643188066-a_0.1-b_0.4-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__37__tsk.csv  (+6 more)
genetic_algorithm/: CMakeLists.txt  old_CMakeLists.txt  run_all_testcases.sh
genetic_algorithm/include/: cost_functions.h  csv_reader.h  simple_genetic_algorithm.h  solution_generator.h  task.h
genetic_algorithm/src/: cost_functions.cpp  simple_genetic_algorithm.cpp  solution_generator.cpp  task.cpp  test_cost.cpp  test_edf.cpp  test_sga.cpp  test_solution_generator.cpp
genetic_algorithm/test_results/: some_plots .ipynb  taskset__1643188013_results.csv  taskset__1643188157_results.csv  taskset__1643188175_results.csv  taskset__1643188539_results.csv  taskset__1643188613_results.csv  taskset_small_results.csv
genetic_algorithm/testcases_seperation_tested/: taskset__1643188375-a_0.4-b_0.1-n_30-m_20-d_unif-p_2000-q_4000-g_1000-t_5__15__tsk.txt
(+5838 files in other folders)
